# accmt-cli

./: .gitignore  README.md  setup.cfg
src/accmtcli/: accmt.py  accmth.py  launch.py  parser.py  test.py  test2.py  utils.py
src/accmtcli/config/: deepspeed-0-bf16.yaml  deepspeed-0-fp16.yaml  deepspeed-0-fp32.yaml  deepspeed-0-fp8.yaml  deepspeed-0.yaml  deepspeed-1-bf16.yaml  deepspeed-1-fp16.yaml  deepspeed-1-fp8.yaml  deepspeed-1.yaml  deepspeed-2-bf16-cpu-cpu.yaml  deepspeed-2-bf16-cpu-none.yaml  deepspeed-2-bf16-cpu-nvme.yaml  deepspeed-2-bf16-none-cpu.yaml  deepspeed-2-bf16-none-nvme.yaml  deepspeed-2-bf16-nvme-cpu.yaml  deepspeed-2-bf16-nvme-none.yaml  deepspeed-2-bf16-nvme-nvme.yaml  deepspeed-2-bf16.yaml  deepspeed-2-fp16-cpu-cpu.yaml  deepspeed-2-fp16-cpu-none.yaml  deepspeed-2-fp16-cpu-nvme.yaml  deepspeed-2-fp16-none-cpu.yaml  deepspeed-2-fp16-none-none.yaml  deepspeed-2-fp16-none-nvme.yaml  deepspeed-2-fp16-nvme-cpu.yaml  deepspeed-2-fp16-nvme-none.yaml  deepspeed-2-fp16-nvme-nvme.yaml  deepspeed-2-fp32-cpu-cpu.yaml  deepspeed-2-fp32-cpu-none.yaml  deepspeed-2-fp32-cpu-nvme.yaml  deepspeed-2-fp32-none-cpu.yaml  deepspeed-2-fp32-none-none.yaml  deepspeed-2-fp32-none-nvme.yaml  deepspeed-2-fp32-nvme-cpu.yaml  deepspeed-2-fp32-nvme-none.yaml  deepspeed-2-fp32-nvme-nvme.yaml  deepspeed-2-fp8-cpu-cpu.yaml  deepspeed-2-fp8-cpu-none.yaml  deepspeed-2-fp8-cpu-nvme.yaml  deepspeed-2-fp8-none-cpu.yaml  (+42 more)
