[metadata]
name = accmt-cli
version = 0.0.1
author = ghanvert
author_email = martin.pizarro@cenia.cl
description = CLI for AcceleratorModule library (accmt).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MartinPC-uls/accmt-cli
project_urls = 
    Bug Tracker = https://github.com/MartinPC-uls/accmt-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

install_requires =
    accelerate
    PyYAML
    

[options.packages.find]
where = src
